jaeger-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: jaeger
  namespace: monitoring
spec:
  replicas: 1
  selector:
    matchLabels:
      app: jaeger
  template:
    metadata:
      labels:
        app: jaeger
    spec:
      containers:
      - name: jaeger
        image: jaegertracing/all-in-one:1.47
        ports:
        - containerPort: 6831
          protocol: UDP
        - containerPort: 16686
---
apiVersion: v1
kind: Service
metadata:
  name: jaeger
  namespace: monitoring
spec:
  selector:
    app: jaeger
  ports:
    - name: udp
      port: 6831
      targetPort: 6831
      protocol: UDP
    - name: ui
      port: 16686
      targetPort: 16686
  type: ClusterIP # setup Cluster để dùng Port-forward cho tiện
