ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: nguyen-ingress
  namespace: model-serving

spec:
  ingressClassName: nginx
  rules:
  - host: 34.87.54.108.nip.io
    http:
      paths:
      - path: /  
        pathType: Prefix
        backend:
          service:
            name: loan-prediction-service
            port:
              number: 80
